--- a/contact.html
+++ b/contact.html
@@ -175,7 +175,7 @@
     <h1>Contact Me</h1>
     <p>
       Contact me on <a href="https://www.linkedin.com/in/shriram-sahoo-95502a340/" target="_blank" rel="noopener noreferrer">LinkedIn</a><br />
-      or email me via <strong class="email">shriramcs27@gmail.com</strong>
+      or email me at <strong class="email">shriramcs27@gmail.com</strong>
     </p>
   </main>
 
