--- a/projects.html
+++ b/projects.html
@@ -202,6 +202,8 @@
      <p>Hey. I’m Shriram.</p>
       <p>I’m currently involved in an Edge AI project in with NVIDIA and SanDisk. In parallel, I’m working on a ML driven project focused on supporting childhood health and development in partnership with UNICEF.</p>
       <br>
+      <p>Building Quant Forum India (QFI)</p>
+      <br>
       <p>Here, is some stuff I did for fun though :P<p>
           <div class="blog-grid">
   <a href="blogs/advice.html" class="blog-card">Relationship Chat Analyser</a>
