--- a/music.html
+++ b/music.html
@@ -208,10 +208,10 @@
       <p>— shrmx</p>
   
             <div class="blog-grid">
-  <a href="blogs/advice.html" class="blog-card">fresh top picks</a>          
-  <a href="blogs/advice.html" class="blog-card">mixes</a>
-  <a href="blogs/advice.html" class="blog-card">songs </a>
-  <a href="blogs/advice.html" class="blog-card">breakdowns/blogs</a>
+  <a href="music/fresh.html" class="blog-card">fresh top picks</a>          
+  <a href="music/mixes.html" class="blog-card">mixes</a>
+  <a href="music/songs.html" class="blog-card">songs </a>
+  <a href="music/blogs.html" class="blog-card">breakdowns/blogs</a>
 </div>
 <br>
 <div class="social-links">
