--- a/projects.html
+++ b/projects.html
@@ -200,13 +200,13 @@
   <main class="page">
     <h1>Projects</h1>
      <p>Hey. I’m Shriram.</p>
-      <p>I’m currently involved in an Edge AI project in with NVIDIA and SanDisk. In parallel, I’m working on a ML driven project focused on supporting childhood health and development in partnership with UNICEF.</p>
+      <p>I’m currently involved in an Edge AI project with NVIDIA and SanDisk. In parallel, I’m working on a ML driven project focused on supporting childhood health and development in partnership with UNICEF.</p>
       <br>
-      <p>Building Quant Forum India (QFI)</p>
+      <p>Building India Quant Forum (IQF)</p>
       <br>
       <p>Here, is some stuff I did for fun though :P<p>
           <div class="blog-grid">
-  <a href="blogs/advice.html" class="blog-card">Relationship Chat Analyser</a>
+  <a href="blogs/advice.html" class="blog-card">Escape Room!</a>
   <a href="blogs/advice.html" class="blog-card">Fair Draw Generation</a>
   <a href="blogs/advice.html" class="blog-card">Gambling Strategy Engine</a>
   <a href="blogs/advice.html" class="blog-card">Connect 4 Bot</a>
