--- a/projects.html
+++ b/projects.html
@@ -200,7 +200,7 @@
   <main class="page">
     <h1>Projects</h1>
      <p>Hey. I’m Shriram.</p>
-      <p>I’m currently involved in an Edge AI project with NVIDIA and SanDisk. In parallel, I’m working on a ML driven project focused on supporting childhood health and development in partnership with UNICEF.</p>
+      <p>I’m currently involved in an Edge AI project with NVIDIA and SanDisk.</p>
       <br>
       <p>Building India Quant Forum (IQF)</p>
       <br>
