--- a/projects.html
+++ b/projects.html
@@ -208,7 +208,7 @@
           <div class="blog-grid">
   <a href="blogs/advice.html" class="blog-card">Escape Room!</a>
   <a href="blogs/advice.html" class="blog-card">Fair Draw Generation</a>
-  <a href="blogs/advice.html" class="blog-card">Gambling Strategy Engine</a>
+  <a href="blogs/advice.html" class="blog-card">Yahtzee Engine</a>
   <a href="blogs/advice.html" class="blog-card">Connect 4 Bot</a>
 </div>
 
