--- a/puzzles.html
+++ b/puzzles.html
@@ -200,17 +200,16 @@
   <main class="page">
     <h1>Puzzles</h1>
       <p>idk what I'm doing here , but people seem to like solving stuff.</p>
-      <p>Here, is my collection of stuff I found cool. (credits to whoever) </p>
        <div class="blog-grid">
-  <a href="blogs/advice.html" class="blog-card">sahoo selects</a>
+  <a href="blogs/advice.html" class="blog-card">my quant test</a>
+    <a href="blogs/advice.html" class="blog-card">intern szn selected.</a>
+
 </div>
 <br>
-  <p>Here's stuff I made :O :</p>
+  <p>Here's stuff I made a long while ago :O :</p>
     <div class="blog-grid">
-  <a href="blogs/advice.html" class="blog-card">Puzzles</a>
-  <a href="blogs/advice.html" class="blog-card">Math</a>
-  <a href="blogs/advice.html" class="blog-card">Physics</a>
-  <a href="blogs/advice.html" class="blog-card">CP</a>
+  <a href="blogs/advice.html" class="blog-card">math event</a>
+  <a href="blogs/advice.html" class="blog-card">qs</a>
 </div>
   </main>
 
