--- a/projects.html
+++ b/projects.html
@@ -200,11 +200,8 @@
   <main class="page">
     <h1>Projects</h1>
      <p>Hey. I’m Shriram.</p>
-      <p>I’m currently involved in an Edge AI project with NVIDIA and SanDisk.</p>
       <br>
-      <p>Building India Quant Forum (IQF)</p>
-      <br>
-      <p>Here, is some stuff I did for fun though :P<p>
+      <p>Here, is some stuff I did for fun :P<p>
           <div class="blog-grid">
   <a href="blogs/advice.html" class="blog-card">Escape Room!</a>
   <a href="blogs/advice.html" class="blog-card">Fair Draw Generation</a>
