quant room draft

--- a/puzzles.html
+++ b/puzzles.html
@@ -201,7 +201,7 @@
     <h1>Puzzles</h1>
       <p>idk what I'm doing here , but people seem to like solving stuff.</p>
        <div class="blog-grid">
-  <a href="blogs/advice.html" class="blog-card">my quant test</a>
+  <a href="quant room.html" class="blog-card">my quant room</a>
     <a href="blogs/advice.html" class="blog-card">intern szn selected.</a>
 
 </div>
