--- a/puzzles.html
+++ b/puzzles.html
@@ -201,15 +201,14 @@
     <h1>Puzzles</h1>
       <p>idk what I'm doing here , but people seem to like solving stuff.</p>
        <div class="blog-grid">
-  <a href="quant room.html" class="blog-card">my quant room</a>
-    <a href="blogs/advice.html" class="blog-card">intern szn selected.</a>
+  <a href="quant room.html" class="blog-card">quant room</a>
 
 </div>
 <br>
   <p>Here's stuff I made a long while ago :O :</p>
     <div class="blog-grid">
-  <a href="blogs/advice.html" class="blog-card">math event</a>
-  <a href="blogs/advice.html" class="blog-card">qs</a>
+  <a href="blogs/advice.html" class="blog-card">puzzle event</a>
+  <a href="blogs/advice.html" class="blog-card">cookie compendium</a>
 </div>
   </main>
 
